trying to fix gsap on mobile

--- a/src/style.scss
+++ b/src/style.scss
@@ -333,3 +333,24 @@ button {
 .dotted-grid {
   background-size: 25px 25px;
 }
+
+/* Corner-only border utility */
+.corner-frame {
+  /* You can override these on the element: --cf-color, --cf-size, --cf-length */
+  --cf-color: currentColor;
+  --cf-size: 1px;
+  --cf-length: 24px;
+
+  background:
+    /* top-left */
+    linear-gradient(to right, var(--cf-color) 0%, var(--cf-color) 100%) top left / var(--cf-length) var(--cf-size) no-repeat,
+    linear-gradient(to bottom, var(--cf-color) 0%, var(--cf-color) 100%) top left / var(--cf-size) var(--cf-length) no-repeat,
+    /* top-right */ linear-gradient(to right, var(--cf-color) 0%, var(--cf-color) 100%) top right / var(--cf-length) var(--cf-size) no-repeat,
+    linear-gradient(to bottom, var(--cf-color) 0%, var(--cf-color) 100%) top right / var(--cf-size) var(--cf-length) no-repeat,
+    /* bottom-left */ linear-gradient(to right, var(--cf-color) 0%, var(--cf-color) 100%) bottom left / var(--cf-length) var(--cf-size) no-repeat,
+    linear-gradient(to bottom, var(--cf-color) 0%, var(--cf-color) 100%) bottom left / var(--cf-size) var(--cf-length) no-repeat,
+    /* bottom-right */ linear-gradient(to right, var(--cf-color) 0%, var(--cf-color) 100%) bottom right / var(--cf-length) var(--cf-size) no-repeat,
+    linear-gradient(to bottom, var(--cf-color) 0%, var(--cf-color) 100%) bottom right / var(--cf-size) var(--cf-length) no-repeat;
+
+  background-origin: padding-box;
+}
